--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Joke App</string>
     <string name="get_joke">Get joke</string>
+    <string name="no_connection">No internet connection!</string>
+    <string name="service_unavailable">Service is unavailable!</string>
 </resources>
