--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="get_joke">Get joke</string>
     <string name="no_connection">No internet connection!</string>
     <string name="service_unavailable">Service is unavailable!</string>
+    <string name="show_favorite_joke">Show favorite joke</string>
+    <string name="icon_add_to_favorite">icon add joke to favorite</string>
 </resources>
