Add fun chooseFavorites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="service_unavailable">Service is unavailable!</string>
     <string name="show_favorite_joke">Show favorite joke</string>
     <string name="icon_add_to_favorite">icon add joke to favorite</string>
+    <string name="no_cached_jokes">No favorite jokes! Add one by heart icon</string>
 </resources>
